material bottom and top navigation

--- a/ios/newReactNativTests/Info.plist
+++ b/ios/newReactNativTests/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
-	<string>BNDL</string>
+	<string>BNDL</string>§
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
@@ -22,3 +22,4 @@
 	<string>1</string>
 </dict>
 </plist>
+
