--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/drawer": "^6.6.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.24",
+    "@react-navigation/material-top-tabs": "^6.6.10",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
